--- a/references.bib
+++ b/references.bib
@@ -19,3 +19,12 @@
 	date = {2017},
 	publisher = {Cambridge University Press}
 }
+
+@book{maynardsmith1982,
+	title = {Evolution and the theory of games},
+	author = {Maynard Smith, J.},
+	year = {1982},
+	date = {1982},
+	publisher = {Cambridge University Press},
+	address = {Cambridge}
+}
