--- a/references.bib
+++ b/references.bib
@@ -28,3 +28,97 @@
 	publisher = {Cambridge University Press},
 	address = {Cambridge}
 }
+
+@book{roughgarden1998,
+	title = {Primer of Ecological Theory},
+	author = {Roughgarden, J.},
+	year = {1998},
+	date = {1998},
+	publisher = {Prentice Hall},
+	address = {Upper Saddle River, New Jersey}
+}
+
+@book{otto2007,
+	title = {A Biologist's Guide to Mathematical Modeling in Ecology and Evolution},
+	author = {Otto, Sarah P. and Day, Troy},
+	year = {2007},
+	month = {12},
+	date = {2007-12-31},
+	publisher = {Princeton University Press},
+	doi = {10.1515/9781400840915},
+	url = {https://www.degruyter.com/document/doi/10.1515/9781400840915/html},
+	note = {DOI: 10.1515/9781400840915}
+}
+
+@book{hilborn1997,
+	title = {The Ecological Detective: Confronting Models with Data},
+	author = {Hilborn, Ray and Mangel, Marc},
+	year = {1997},
+	date = {1997},
+	publisher = {Princeton University Press},
+	edition = {1st}
+}
+
+@article{shafir1998,
+	title = {Testing predictions of foraging theory for a sit-and-wait forager, \emph{\textbraceleft}Anolis gingivinus{\textbraceright}},
+	author = {Shafir, S. and Roughgarden, J.},
+	year = {1998},
+	date = {1998},
+	journal = {Behav Ecol},
+	pages = {74--84},
+	volume = {9},
+	number = {1Shafir98}
+}
+
+@article{pyke1984,
+	title = {Optimal Foraging Theory: A Critical Review},
+	author = {Pyke, Graham H.},
+	year = {1984},
+	month = {01},
+	date = {1984-01-01},
+	journal = {Annual Review of Ecology and Systematics},
+	pages = {523--575},
+	volume = {15},
+	url = {http://www.jstor.org/stable/2096959}
+}
+
+@book{losos2009,
+	title = {Lizards in an Evolutionary TreeEcology and Adaptive Radiation of Anoles},
+	author = {Losos, Jonathan B.},
+	year = {2009},
+	month = {08},
+	date = {2009-08-15},
+	publisher = {University of California Press},
+	doi = {10.1525/california/9780520255913.001.0001},
+	url = {https://academic.oup.com/california-scholarship-online/book/28567},
+	note = {DOI: 10.1525/california/9780520255913.001.0001}
+}
+
+@misc{winchella2016,
+	title = {Data from: Phenotypic shifts in urban areas in the tropical lizard Anolis cristatellus},
+	author = {Winchell, Kristin M. and Reynolds, Robert Graham and Prado-Irwin, Sofia R. and {Puente-Rolón}, Alberto R. and Revell, Liam J.},
+	date = {2016},
+	doi = {10.5061/DRYAD.H234N},
+	langid = {en}
+}
+
+@inbook{huey1982,
+	title = {Temperature, Physiology, and the Ecology of Reptiles},
+	author = {Huey, B},
+	editor = {Carl Gans,  and F. Harvey, },
+	year = {1982},
+	date = {1982},
+	publisher = {Academic Press},
+	address = {New York},
+	langid = {en}
+}
+
+@book{dugatkin1998,
+	title = {Game Theory & Animal Behavior},
+	author = {Dugatkin, Lee Alan and Reeve, Hudson Kern},
+	year = {1998},
+	date = {1998},
+	publisher = {Oxford University Press},
+	note = {Google-Books-ID: q67uAAAAMAAJ},
+	langid = {en}
+}
